--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,8 @@
 <%= render "shared/header" %>
 <div class='main'>
 
+  <%= render partial: "shared/header", collection: @items %>
+
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
