--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/header" %>
+<%#= render "shared/header" %>
 <div class='main'>
 
   <%= render partial: "shared/header", collection: @items %>
