--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
-<%#= render "shared/header" %>
+
 <div class='main'>
 
-  <%= render partial: "shared/header", collection: @items %>
+  <%= render partial: "shared/header" %>
 
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
@@ -167,7 +167,7 @@
             商品を出品してね！
           </h3>
           <div class='item-price'>
-            <span>99999999円<br>(税込み)</span>
+            <span>"99999999"<br>(税込み)</span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
