--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,7 +132,7 @@
          <% @items.each do |item| %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item.id), method: :get do %>  
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
@@ -146,7 +146,7 @@
         <div class='item-info'>
            
           <h3 class='item-name'>
-            <%= "#{item.item_name}" %>
+            <%= "#{item.item_name}"%>
           </h3>
           <div class='item-price'>
             <span><%= item.price %>円<br><%= item.charge.name %></span>
@@ -162,7 +162,7 @@
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
-      <% if @item == nil %>
+      <% if @items == nil %>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
         <%= link_to '#' do %>
