--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -37,7 +37,7 @@
     
     <% elsif user_signed_in? %>
       
-      <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
+      <%= link_to '購入画面に進む',  item_orders_path(@item) ,method: :get,   class:"item-red-btn"%>
 
     <% end %>
     
