--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -27,7 +27,7 @@
     </div>
 
     
-    <% if user_signed_in? &&  current_user.id == @item.user_id %>
+    <% if  current_user.id == @item.user_id %>
     
     <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
     <p class='or-text'>or</p>
@@ -37,7 +37,7 @@
 
 
     
-    <% elsif user_signed_in? %>
+    <% elsif user_signed_in? && current_user.id != @item.user_id  %>
       
       <%= link_to '購入画面に進む',  item_orders_path(@item) ,method: :get,   class:"item-red-btn"%>
 
