--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -27,7 +27,7 @@
     </div>
 
     
-    <% if  current_user.id == @item.user_id %>
+    <% if user_signed_in? && current_user.id == @item.user_id && @item.order == nil %>
     
     <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
     <p class='or-text'>or</p>
@@ -37,9 +37,12 @@
 
 
     
-    <% elsif user_signed_in? && current_user.id != @item.user_id  %>
+    <% elsif user_signed_in? %>
+       <%= link_to '購入画面に進む',  item_orders_path(@item) ,method: :get,   class:"item-red-btn"%>
       
-      <%= link_to '購入画面に進む',  item_orders_path(@item) ,method: :get,   class:"item-red-btn"%>
+     
+       
+    
 
     <% end %>
     
