--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -163,7 +163,7 @@
       </li>
       
       
-      <% if @items == nil %>
+      <% if @item == nil %>
       
       <li class='list'>
         <%= link_to '#' do %>
