--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -198,7 +198,7 @@
 
 <% else %>
 
-<%= link_to(root_path, class: 'purchase-btn') do %>
+<%= link_to(new_user_registration_path, class: 'purchase-btn') do %>
   <span class='purchase-btn-text'>出品する</span>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>  
